2007-12-13  Murray Cumming  <murrayc@murrayc.com>

	* examples/behaviour/main.c: (main):
	* examples/effects/main.c: (main):
	* examples/timeline/main.c: (main): unref the timeline when the mainloop 
	stops.
	* examples/full_example/main.c: Avoid using even 360 degrees (not just >360) 
	to avoid an extra rotation of some items. Move and scale the clicked item 
	when the rotation stops.

2007-12-13  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Contributing: 
	Correct the email address.
	Timelines: Mention behaviours and actors, while 
	still avoiding trying to explain them all in one 
	paragraph, because each chapter explains the advantage 
	compared to the previous one. I don't want to confuse 
	people with too many concepts too quickly.
	Actor Events: Mention 
	clutter_set_motion_events_enabled() and 
	clutter_actor_set_reactive().
	Thanks to Tommi Komulainen for the suggestions.

2007-12-12  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Behaviours: 
	List the standard behaviours.

2007-12-12  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* examples/Makefile.am:
	* examples/actor_transformations/main.c: (main):
	Added this example.
	* examples/actor/main.c: (main): Removed the 
	rotation from this example.
	* docs/tutorial/clutter-tut.xml: Actors: Added a 
	transformations sub-section.
	* docs/tutorial/figures/Makefile.am:
	* docs/tutorial/figures/: Added screenshots for 
	actor_events and actor_transformations.

2007-12-10  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/figures/Makefile.am:
	Added docs/tutorial/figures/custom_actor.png

2007-12-10  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Put all the text in a sect1 instead of just at 
	the start of a chapter or appendix. Otherwise people will often jump straight past 
	it to the example if the example is the only thing listed in the table of contents.

2007-12-10  Murray Cumming  <murrayc@murrayc.com>
